--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dev-to-do-list",
-  "version": "1.0.0",
-  "description": "\"\"\u001b[D\u001b",
+  "version": "1.1.0",
+  "description": "d-t-d-l",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
