--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/js/index.js"
+    "start": "node src/js/index.js",
+    "startOB": "node src/js/ohmScripts.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/Ehawk82/dev-to-do-list/issues"
   },
-  "homepage": "https://github.com/Ehawk82/dev-to-do-list#readme"
+  "homepage": "https://github.com/Ehawk82/dev-to-do-list#readme",
+  "devDependencies": {
+    "ohmboi": "^1.2.0"
+  }
 }
